[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.12.9", features=["cookies", "blocking"]}
scraper = "0.21.0"
argparse = "0.2.2"
regex = "1.11.1"
rayon = "1.10.0"
cached = "0.54.0"
itertools = "0.13.0"
rustc-hash = "2.1.0"
trie-rs = "0.4.2"
num-traits = "0.2"
